don't proactively close input stream'